feat: handle api exception