@@ -1,7 +1,9 @@
 package com.leacooking.LeaCooking.api.service;
 
+import com.leacooking.LeaCooking.api.config.error.ErrorEnum;
 import com.leacooking.LeaCooking.api.dto.recipe.RecipeDTO;
 import com.leacooking.LeaCooking.api.entity.Recipe;
+import com.leacooking.LeaCooking.api.exception.ApiException;
 import com.leacooking.LeaCooking.api.mapper.RecipeMapper;
 import com.leacooking.LeaCooking.api.repository.RecipeRepository;
 import lombok.RequiredArgsConstructor;
@@ -16,10 +18,15 @@ public class RecipeService {
     private final RecipeRepository recipeRepository;
     private final RecipeMapper recipeMapper;
 
-    public List<RecipeDTO> getAllRecipes() {
+    public List<RecipeDTO> getAllRecipes() throws ApiException {
         List<Recipe> recipes = recipeRepository.findAll();
+
+        if (recipes.isEmpty()) {
+            throw new ApiException(ErrorEnum.E500, "No recipes found.");
+        }
+
         return recipes.stream()
-                      .map(recipeMapper::toDTO)
-                      .collect(Collectors.toList());
+                .map(recipeMapper::toDTO)
+                .toList();
     }
 }
